# safas

./: Cargo.toml  README.md  design.sf
examples/: x16_hello_world.sf
src/: interactive.rs  main.rs
src/bind/: allocate_cell_monad.rs  bind_args_monad.rs  bind_error.rs  bind_simple_statement.rs  bind_statement.rs  binding_monad.rs  binding_monad_sugar.rs  compile_statement.rs  export_symbol_monad.rs  mod.rs  pre_bind_statement.rs  symbol_bindings.rs  symbol_value.rs  syntax_compiler.rs  with_reference_type.rs
src/bitcode/: assemble.rs  bitcode_functions.rs  bitcode_monad.rs  bitcode_syntax.rs  buffer.rs  code.rs  label.rs  label_syntax.rs  mod.rs  to_bytes.rs
src/exec/: action.rs  bitcode_buffer.rs  closure.rs  compiled_actions.rs  eval.rs  fn_monad.rs  frame.rs  frame_monad.rs  lambda.rs  mod.rs  returns_monad.rs  runtime_error.rs  symbol_value.rs
src/functions/: arithmetic.rs  bitcode.rs  bits.rs  btree.rs  comparison.rs  list.rs  mod.rs  monad.rs  standard_functions.rs
src/io/: builtin_library.rs  hexdump.rs  import.rs  mod.rs
src/meta/: atom.rs  bitcode.rs  btree.rs  cell.rs  cell_conversion.rs  list.rs  mod.rs  monad_type.rs  number.rs  number_conversion.rs  varargs.rs
src/parse/: error.rs  file_location.rs  mod.rs  parser.rs  read_buffer.rs  tokenizer.rs
src/syntax/: assemble_syntax.rs  conditional.rs  def.rs  def_syntax.rs  export.rs  extend_syntax.rs  fun.rs  lambda.rs  mod.rs  monad.rs  pattern_match.rs  quote.rs  standard_syntax.rs  syntax_closure.rs  syntax_symbol.rs
