[package]
name        = "safas"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.io>"]
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/safas"

[dependencies]
lazy_static = "1.4"
smallvec    = "0.6"
radix_fmt   = "1.0"
itertools   = "0.8"
clap        = "2.33"
